package com.vamshi.oop;

public class Addition {
    static int a1=20;
    public static int findSum(int a,int b){
        return a+b+a1;
    }
}
