package com.vamshi.oop;

public abstract class testabs {
    public  abstract void method();
}
